trunk/NewArchive/1e2ff8f90fdb16ec4bffbb65b4507657-0f732321323bad263acad699748475b5/output
+ clang++ -stdlib=libc++ -std=c++0x -O2 -lldd -Wall -pthread main.cpp
main.cpp:10:3: error: call to 'vector' is ambiguous
  vector<num>();
  ^~~~~~~~~~~
main.cpp:4:6: note: candidate function [with nd = 3, $1 = <>]
void vector() {}
     ^
main.cpp:6:6: note: candidate function [with nd = 3, $1 = <>]
void vector() {}
     ^
1 error generated.
